<?xml version="1.0" encoding="utf-8"?>

<!--
    Copyright (C) 2015 Damien Chazoule

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:scrollbars="vertical" />

    <com.getbase.floatingactionbutton.FloatingActionsMenu
        android:id="@+id/multipleActions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        fab:fab_addButtonColorNormal="@color/greyEmpty"
        fab:fab_addButtonColorPressed="@color/greyEmpty"
        fab:fab_addButtonPlusIconColor="@color/greyDark"
        fab:fab_labelStyle="@style/Label"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp" >

		<com.getbase.floatingactionbutton.FloatingActionButton
			android:id="@+id/actionSystem"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			fab:fab_icon="@drawable/img_system"
			fab:fab_size="mini"
			fab:fab_colorNormal="@color/orange"
			fab:fab_title="@string/reboot_system"
			fab:fab_colorPressed="@color/orangeDark" />

		<com.getbase.floatingactionbutton.FloatingActionButton
			android:id="@+id/actionRecovery"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			fab:fab_icon="@drawable/img_recovery"
			fab:fab_size="mini"
			fab:fab_colorNormal="@color/orange"
			fab:fab_title="@string/reboot_recovery"
			fab:fab_colorPressed="@color/orangeDark" />

		<com.getbase.floatingactionbutton.FloatingActionButton
			android:id="@+id/actionBootLoader"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			fab:fab_icon="@drawable/img_bootloader"
			fab:fab_size="mini"
			fab:fab_colorNormal="@color/orange"
			fab:fab_title="@string/reboot_bootloader"
			fab:fab_colorPressed="@color/orangeDark" />

		<com.getbase.floatingactionbutton.FloatingActionButton
			android:id="@+id/actionLock"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			fab:fab_icon="@drawable/img_lock"
			fab:fab_size="mini"
			fab:fab_colorNormal="@color/red"
			fab:fab_title="@string/lock"
			fab:fab_colorPressed="@color/redDark" />

		<com.getbase.floatingactionbutton.FloatingActionButton
			android:id="@+id/actionUnlock"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			fab:fab_icon="@drawable/img_unlock"
			fab:fab_size="mini"
			fab:fab_colorNormal="@color/green"
			fab:fab_title="@string/unlock"
			fab:fab_colorPressed="@color/greenDark" />

    </com.getbase.floatingactionbutton.FloatingActionsMenu>

</RelativeLayout>